add support for jetty deployment in webapp-repo sample