@@ -11,7 +11,7 @@
 	</path>
 	
 	<path id="sample-classpath">
-		<pathelement location="./WEB-INF/classes/"/>
+		<pathelement location="./build/webapp/WEB-INF/classes/"/>
 		<pathelement location="../../fonts"/>
 		<path refid="project-classpath"/>
 	</path>
@@ -23,25 +23,19 @@
 		<ivy:cachepath pathid="project-lib"/> 
 	</target>
 
-	<target name="prepare" description="Copies the required JAR files from the project's /lib directory">
-		<ant dir="../../../" target="jar"/>
-		<copy todir="./WEB-INF/lib">
-			<fileset dir="../../../dist">
-				<include name="**/jasperreports-*.jar"/>
-				<exclude name="**/jasperreports-javaflow-*.jar"/>
-			</fileset>
-		</copy>
-		<ivy:configure file="../../../ivysettings.xml" override="true"/>
-		<ivy:retrieve file="./ivy-lib.xml" pattern="./WEB-INF/lib/[artifact]-[revision].[ext]" log="download-only" conf="test"/> 
-	</target>
-
-	<target name="javac" description="Compiles the java source files of the web application." depends="prepare, prepare-compile-classpath">
-		<javac srcdir="./WEB-INF/classes/" destdir="./WEB-INF/classes/" debug="true" optimize="false" deprecation="true" target="1.7" source="1.7"
+	<target name="javac" description="Compiles the java source files of the web application." depends="prepare-compile-classpath">
+		<mkdir dir="./build/webapp/WEB-INF/classes"/> 
+		<javac srcdir="./src/" destdir="./build/webapp/WEB-INF/classes/" debug="true" optimize="false" deprecation="true" target="1.7" source="1.7"
 				encoding="ISO-8859-1" includeantruntime="false">
 			<classpath refid="sample-classpath"/>
 			<compilerarg value="-Xlint:-unchecked"/>
 			<compilerarg value="-Xlint:-options"/>
 		</javac>
+		<copy todir="./build/webapp/WEB-INF/classes">
+			<fileset dir="./src">
+				<exclude name="**/*.java"/>
+			</fileset>
+		</copy>
 	</target>
 
 	<target name="define-jrc" depends="prepare-compile-classpath">
@@ -51,158 +45,78 @@
 	</target>
 
 	<target name="compile" description="Compiles the report design files of the web application." depends="javac, define-jrc"> 
+		<mkdir dir="./build/webapp/WEB-INF/repository"/> 
 		<jrc 
-				srcdir="./WEB-INF/repository/"
-				destdir="./WEB-INF/repository/"
+				srcdir="./web/WEB-INF/repository/"
+				destdir="./build/webapp/WEB-INF/repository/"
 				xmlvalidation="true">
 			<classpath refid="sample-classpath"/>
 			<include name="**/*.jrxml"/>
 		</jrc>
 	</target> 
 
-	<target name="clean" description="Deletes all the generated files.">
-		<delete>
-			<fileset dir="." includes="**/*.class" />
-			<fileset dir="." includes="**/*.war" />
-			<fileset dir="." includes="**/*.jar" />
-			<fileset dir="." includes="**/*.jasper" />
-		</delete>
+	<target name="prepare" description="Copies the required JAR files from the project's /lib directory" depends="compile">
+		<ant dir="../../../" target="jar"/>
+		<mkdir dir="./build/webapp/WEB-INF/lib"/> 
+		<copy todir="./build/webapp/WEB-INF/lib">
+			<fileset dir="../../../dist">
+				<include name="**/jasperreports-*.jar"/>
+				<exclude name="**/jasperreports-javaflow-*.jar"/>
+			</fileset>
+		</copy>
+		<ivy:configure file="../../../ivysettings.xml" override="true"/>
+		<ivy:retrieve file="./ivy-lib.xml" pattern="./build/webapp/WEB-INF/lib/[artifact]-[revision].[ext]" log="download-only" conf="test"/> 
+		<copy todir="./build/webapp/">
+			<fileset dir="./web">
+				<exclude name="**/WEB-INF/repository/**/*.jrxml"/>
+			</fileset>
+		</copy>
 	</target>
 
-	<target name="war" depends="compile" description="Builds the Web application .war file.">
-		<war warfile="${war.name}" webxml="./WEB-INF/web.xml">
-			<fileset dir="." includes="**/*.css" />
-			<fileset dir="." includes="**/*.html" />
-			<fileset dir="." includes="**/*.class" excludes="**/WEB-INF/classes/**/*.class"/>
-			<fileset dir="." includes="**/*.jar" excludes="**/WEB-INF/lib/**/*.jar"/>
-			<fileset dir="." includes="**/WEB-INF/classes/**/*.java"/>
-			<fileset dir="." includes="**/images/**/*.*" />
-			<fileset dir="." includes="**/jasperreports/**/*.*" />
-			<fileset dir="." includes="**/javascript/**/*.*" />
-			<fileset dir="." includes="**/scripts/**/*.*" />
-			<fileset dir="." includes="**/WEB-INF/repository/**/*.*" excludes="**/WEB-INF/repository/**/*.jrxml"/>
-			<classes dir="./WEB-INF/classes/">
+	<target name="war" depends="prepare" description="Builds the Web application .war file.">
+		<war warfile="./build/${war.name}" webxml="./build/webapp/WEB-INF/web.xml">
+			<classes dir="./build/webapp/WEB-INF/classes/">
 				<include name="**/*.class" />
 				<include name="**/*.properties" />
 				<include name="**/*.xml" />
 				<include name="**/*.vm" />
 			</classes>
-			<lib dir="./WEB-INF/lib/">
+			<lib dir="./build/webapp/WEB-INF/lib/">
 				<include name="*.jar" />
 			</lib>
 		</war>
 	</target>
 	
+	<target name="prepare-jetty-classpath">
+		<ivy:configure file="../../../ivysettings.xml" override="true"/>
+		<ivy:resolve file="../ivy-jetty.xml" log="download-only" conf="test"/> 
+		<ivy:cachepath pathid="jetty.plugin.classpath"/> 
+	</target>
+
+	<target name="jetty.run" depends="prepare-jetty-classpath, prepare">
+		<taskdef classpathref="jetty.plugin.classpath" resource="tasks.properties" loaderref="jetty.loader" />
+		<typedef name="connector" classname="org.eclipse.jetty.ant.types.Connector"
+			classpathref="jetty.plugin.classpath" loaderref="jetty.loader" />
+		<typedef name="webApp" classname="org.eclipse.jetty.ant.AntWebAppContext"
+			classpathref="jetty.plugin.classpath" loaderref="jetty.loader" />
+		<jetty.run>
+			<webApp war="./build/webapp" contextPath="/jasperreports"/>
+			<connectors>
+				<connector port="8080"/>
+			</connectors>
+		</jetty.run>
+	</target>
+
+	<target name="clean" description="Deletes all the generated files.">
+		<delete dir="./build" />
+	</target>
+
 	<target name="test" description="Runs the sample.">
 		<echo message="==================================="/>
 		<echo message=" Webapp Repository Sample"/>
 		<echo message="==================================="/>
 		<antcall target="clean" />
 		<antcall target="compile" />
-	</target>
-	
-	
-	<property file="build.properties"/>
-	
-	<target name="isTomcatRunning">
-		<echo message="Checking Tomcat Status" />
-		<condition property="tomcat.running">
-		 	<socket server="${tomcat.host}" port="${tomcat.port}" /> 
-		</condition>
-	</target>
-	
-	<target name="startTomcat" depends="isTomcatRunning" unless="tomcat.running">
-		<echo message="Starting Tomcat" />
-	    <java classname="org.apache.catalina.startup.Bootstrap" fork="true" spawn="true">
-	    	<classpath path="${tomcat.home}/bin/bootstrap.jar:${tomcat.home}/bin/tomcat-juli.jar" />
-	        <jvmarg value="-Djava.util.logging.config.file=${tomcat.home}/conf/logging.properties" />
-	        <jvmarg value="-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager" />
-	        <jvmarg value="-Xmx512m" />
-	        <jvmarg value="-XX:MaxPermSize=256m" />
-	        <jvmarg value="-Djava.endorsed.dirs=${tomcat.home}/endorsed" />
-	        <jvmarg value="-Dcatalina.base=${tomcat.home}" />
-	        <jvmarg value="-Dcatalina.home=${tomcat.home}" />
-	        <jvmarg value="-Djava.io.tmpdir=${tomcat.home}/temp" />
-	        <jvmarg value="-Dlog4j.debug" />
-	    	<arg line="start" />
-	    </java>
-	</target>
-
-	<target name="stopTomcat" depends="isTomcatRunning" if="tomcat.running">
-		<echo message="Stopping Tomcat" />
-		<java classname="org.apache.catalina.startup.Bootstrap" fork="true" spawn="true">
-			<classpath path="${tomcat.home}/bin/bootstrap.jar:${tomcat.home}/bin/tomcat-juli.jar" />
-			<jvmarg value="-Dcatalina.home=${tomcat.home}" />
-	        <arg line="stop"/>
-		</java>
-	</target>
-
-	<target name="jrJar">
-		<ant antfile="${jasperreports.ant.file}" target="jar" inheritall="false"/>
-	</target>
-
-	<target name="jrCleanJar" description="Performs jasperreports clean and jar">
-		<ant antfile="${jasperreports.ant.file}" target="clean" inheritall="false"/>
-		<ant antfile="${jasperreports.ant.file}" target="jar" inheritall="false"/>
-	</target>
-
-	<target name="copyWarToTomcat" depends="clean, war">
-		<copy todir="${tomcat.home}/webapps" file="${basedir}/${war.name}" />
-	</target>
-	
-	<target name="cleanTomcat">
-		<delete includeemptydirs="true" verbose="true">
-			<fileset dir="${tomcat.home}/temp">
-				<include name="**/*" />
-			</fileset>
-			<fileset dir="${tomcat.home}/work/Catalina/localhost/${projectname}">
-				<include name="**/*" />
-			</fileset>
-			<fileset dir="${tomcat.home}/webapps">
-				<include name="${war.name}" />
-				<include name="${projectname}/**" />
-			</fileset>
-		</delete>
-	</target>
-	
-	<target name="copyFilesToTomcat" depends="clean, compile">
-		<mkdir dir="${tomcat.home}/webapps/${projectname}"/>
-		<copy todir="${tomcat.home}/webapps/${projectname}">
-			<fileset dir="."/>
-		</copy>
-	</target>
-	
-	<target name="deploy">
-		<antcall target="stopTomcat" />
-		<antcall target="jrJar" />
-		<antcall target="cleanTomcat" />
-		<antcall target="copyWarToTomcat" />
-		<antcall target="startTomcat" inheritall="false" />
-	</target>
-
-	<target name="deploy_files">
-		<antcall target="stopTomcat" />
-		<antcall target="jrJar" />
-		<antcall target="cleanTomcat" />
-		<antcall target="copyFilesToTomcat" />
-		<antcall target="startTomcat" inheritall="false" />
-	</target>
-
-	<target name="deploy_nostart">
-		<antcall target="stopTomcat" />
-		<antcall target="jrJar" />
-		<antcall target="cleanTomcat" />
-		<antcall target="copyFilesToTomcat" />
-	</target>
-	
-	<target name="deploy_js">
-		<copy todir="${tomcat.home}/webapps/${projectname}/WEB-INF/classes">
-			<fileset dir="../../../src">
-				<include name="**/*.js"/>
-				<include name="**/*.css"/>
-				<include name="**/*.vm"/>
-			</fileset>
-		</copy>
 	</target>
 
 </project>
